baml_language/crates/baml_tests/snapshots/namespaces_type_resolution/baml_tests__namespaces_type_resolution__02_parser__ns_llm_models.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Config"
    L_BRACE "{"
    FIELD
      WORD "model"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "temperature"
      TYPE_EXPR "float"
        WORD "float"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Error"
    L_BRACE "{"
    FIELD
      WORD "reason"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "retryable"
      TYPE_EXPR "bool"
        WORD "bool"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Status"
    L_BRACE "{"
    ENUM_VARIANT "Ready"
      WORD "Ready"
    ENUM_VARIANT "Generating"
      WORD "Generating"
    ENUM_VARIANT "Done"
      WORD "Done"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Model"
    L_BRACE "{"
    ENUM_VARIANT "GPT4"
      WORD "GPT4"
    ENUM_VARIANT "Claude"
      WORD "Claude"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Response"
    L_BRACE "{"
    FIELD
      WORD "text"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "tokens"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "ConfigAlias"
    EQUALS "="
    TYPE_EXPR "Config"
      WORD "Config"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "ResponseAlias"
    EQUALS "="
    TYPE_EXPR "Response"
      WORD "Response"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmIdentity"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "Config"
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Config"
      WORD "Config"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
    cfg
}"
        L_BRACE "{"
        WORD "cfg"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmConstruct"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "model"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Config"
      WORD "Config"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Config"
          L_BRACE "{"
          OBJECT_FIELD "model: model"
            WORD "model"
            COLON ":"
            WORD "model"
          COMMA ","
          OBJECT_FIELD "temperature: 0.7"
            WORD "temperature"
            COLON ":"
            FLOAT_LITERAL "0.7"
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmEnumReturn"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Status"
      WORD "Status"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "Status.Ready"
          WORD "Status"
          DOT "."
          WORD "Ready"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmEnumMatch"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "s"
        COLON ":"
        TYPE_EXPR "Status"
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "s"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "Status.Ready"
              WORD "Status"
              DOT "."
              WORD "Ready"
            FAT_ARROW "=>"
            STRING_LITERAL "ready"
              QUOTE """
              WORD "ready"
              QUOTE """
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "Status.Generating"
              WORD "Status"
              DOT "."
              WORD "Generating"
            FAT_ARROW "=>"
            STRING_LITERAL "generating"
              QUOTE """
              WORD "generating"
              QUOTE """
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "Status.Done"
              WORD "Status"
              DOT "."
              WORD "Done"
            FAT_ARROW "=>"
            STRING_LITERAL "done"
              QUOTE """
              WORD "done"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmAliasParam"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "ConfigAlias"
          WORD "ConfigAlias"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.model"
          WORD "cfg"
          DOT "."
          WORD "model"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmThrowClass"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "0"
              INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              OBJECT_LITERAL
                WORD "Error"
                L_BRACE "{"
                OBJECT_FIELD
                  WORD "reason"
                  COLON ":"
                  STRING_LITERAL "llm failed"
                    QUOTE """
                    WORD "llm"
                    WORD "failed"
                    QUOTE """
                COMMA ","
                OBJECT_FIELD "retryable: true"
                  WORD "retryable"
                  COLON ":"
                  WORD "true"
                R_BRACE "}"
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "_"
              WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmThrowEnum"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "0"
              INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              PATH_EXPR "Status.Done"
                WORD "Status"
                DOT "."
                WORD "Done"
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "_"
              WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmResponseConstruct"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "text"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Response"
      WORD "Response"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Response"
          L_BRACE "{"
          OBJECT_FIELD "text: text"
            WORD "text"
            COLON ":"
            WORD "text"
          COMMA ","
          OBJECT_FIELD "tokens: 42"
            WORD "tokens"
            COLON ":"
            INTEGER_LITERAL "42"
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmUsesRootConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.Config"
          WORD "root"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.key"
          WORD "cfg"
          DOT "."
          WORD "key"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmUsesRootError"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "e"
        COLON ":"
        TYPE_EXPR "root.Error"
          WORD "root"
          DOT "."
          WORD "Error"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "e.message"
          WORD "e"
          DOT "."
          WORD "message"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmUsesRootStatus"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "root.Status"
      WORD "root"
      DOT "."
      WORD "Status"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root.Status.Ok"
          WORD "root"
          DOT "."
          WORD "Status"
          DOT "."
          WORD "Ok"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmMatchesRootStatus"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "s"
        COLON ":"
        TYPE_EXPR "root.Status"
          WORD "root"
          DOT "."
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "s"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "root.Status.Ok"
              WORD "root"
              DOT "."
              WORD "Status"
              DOT "."
              WORD "Ok"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "root.Status.Failed"
              WORD "root"
              DOT "."
              WORD "Status"
              DOT "."
              WORD "Failed"
            FAT_ARROW "=>"
            STRING_LITERAL "failed"
              QUOTE """
              WORD "failed"
              QUOTE """
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "root.Status.Pending"
              WORD "root"
              DOT "."
              WORD "Status"
              DOT "."
              WORD "Pending"
            FAT_ARROW "=>"
            STRING_LITERAL "pending"
              QUOTE """
              WORD "pending"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmUsesRootAlias"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.ConfigAlias"
          WORD "root"
          DOT "."
          WORD "ConfigAlias"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.key"
          WORD "cfg"
          DOT "."
          WORD "key"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmThrowsRootError"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "0"
              INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              OBJECT_LITERAL
                PATH_EXPR "root.Error"
                  WORD "root"
                  DOT "."
                  WORD "Error"
                L_BRACE "{"
                OBJECT_FIELD "code: 404"
                  WORD "code"
                  COLON ":"
                  INTEGER_LITERAL "404"
                COMMA ","
                OBJECT_FIELD
                  WORD "message"
                  COLON ":"
                  STRING_LITERAL "not found"
                    QUOTE """
                    WORD "not"
                    WORD "found"
                    QUOTE """
                R_BRACE "}"
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "_"
              WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmThrowsRootEnum"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "0"
              INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              PATH_EXPR "root.Status.Failed"
                WORD "root"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Failed"
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "_"
              WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmUsesAuthConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.auth.Config"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.provider"
          WORD "cfg"
          DOT "."
          WORD "provider"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmUsesAuthError"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "e"
        COLON ":"
        TYPE_EXPR "root.auth.Error"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Error"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "e.realm"
          WORD "e"
          DOT "."
          WORD "realm"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmUsesAuthRole"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "root.auth.Role"
      WORD "root"
      DOT "."
      WORD "auth"
      DOT "."
      WORD "Role"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root.auth.Role.Admin"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Role"
          DOT "."
          WORD "Admin"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmUsesNestedClient"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "c"
        COLON ":"
        TYPE_EXPR "root.llm.openai.Client"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "openai"
          DOT "."
          WORD "Client"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "c.api_key"
          WORD "c"
          DOT "."
          WORD "api_key"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "LlmMixedConfigs"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "llm_cfg"
        COLON ":"
        TYPE_EXPR "Config"
          WORD "Config"
      COMMA ","
      PARAMETER
        WORD "root_cfg"
        COLON ":"
        TYPE_EXPR "root.Config"
          WORD "root"
          DOT "."
          WORD "Config"
      COMMA ","
      PARAMETER
        WORD "auth_cfg"
        COLON ":"
        TYPE_EXPR "root.auth.Config"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "llm_cfg.model"
          WORD "llm_cfg"
          DOT "."
          WORD "model"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "LlmWithCrossNsFields"
    L_BRACE "{"
    FIELD
      WORD "own_config"
      TYPE_EXPR "Config"
        WORD "Config"
    FIELD
      WORD "own_response"
      TYPE_EXPR "Response"
        WORD "Response"
    FIELD
      WORD "root_config"
      TYPE_EXPR "root.Config"
        WORD "root"
        DOT "."
        WORD "Config"
    FIELD
      WORD "root_error"
      TYPE_EXPR "root.Error"
        WORD "root"
        DOT "."
        WORD "Error"
    FIELD
      WORD "auth_config"
      TYPE_EXPR "root.auth.Config"
        WORD "root"
        DOT "."
        WORD "auth"
        DOT "."
        WORD "Config"
    FIELD
      WORD "nested_client"
      TYPE_EXPR "root.llm.openai.Client"
        WORD "root"
        DOT "."
        WORD "llm"
        DOT "."
        WORD "openai"
        DOT "."
        WORD "Client"
    FIELD
      WORD "own_status"
      TYPE_EXPR "Status"
        WORD "Status"
    FIELD
      WORD "own_alias"
      TYPE_EXPR "ConfigAlias"
        WORD "ConfigAlias"
    FIELD
      WORD "root_alias"
      TYPE_EXPR "root.ConfigAlias"
        WORD "root"
        DOT "."
        WORD "ConfigAlias"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "LlmWithRootAlias"
    L_BRACE "{"
    FIELD
      WORD "root_alias"
      TYPE_EXPR "root.ConfigAlias"
        WORD "root"
        DOT "."
        WORD "ConfigAlias"
    FIELD
      WORD "own_alias"
      TYPE_EXPR "ResponseAlias"
        WORD "ResponseAlias"
    R_BRACE "}"

=== ERRORS ===
None
