baml_language/crates/baml_tests/snapshots/namespaces_type_resolution/baml_tests__namespaces_type_resolution__02_parser__ns_llm_ns_openai_client.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Client"
    L_BRACE "{"
    FIELD
      WORD "api_key"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "org_id"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Error"
    L_BRACE "{"
    FIELD
      WORD "status_code"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "body"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Model"
    L_BRACE "{"
    ENUM_VARIANT "GPT4o"
      WORD "GPT4o"
    ENUM_VARIANT "GPT4oMini"
      WORD "GPT4oMini"
    ENUM_VARIANT "O3"
      WORD "O3"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIIdentity"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "c"
        COLON ":"
        TYPE_EXPR "Client"
          WORD "Client"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Client"
      WORD "Client"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
    c
}"
        L_BRACE "{"
        WORD "c"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIConstruct"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "key"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Client"
      WORD "Client"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Client"
          L_BRACE "{"
          OBJECT_FIELD "api_key: key"
            WORD "api_key"
            COLON ":"
            WORD "key"
          COMMA ","
          OBJECT_FIELD
            WORD "org_id"
            COLON ":"
            STRING_LITERAL "org-123"
              QUOTE """
              WORD "org-123"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIEnumReturn"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Model"
      WORD "Model"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "Model.GPT4o"
          WORD "Model"
          DOT "."
          WORD "GPT4o"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIEnumMatch"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "m"
        COLON ":"
        TYPE_EXPR "Model"
          WORD "Model"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "m"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Model.GPT4o"
                WORD "Model"
                DOT "."
                WORD "GPT4o"
            FAT_ARROW "=>"
            STRING_LITERAL "gpt4o"
              QUOTE """
              WORD "gpt4o"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Model.GPT4oMini"
                WORD "Model"
                DOT "."
                WORD "GPT4oMini"
            FAT_ARROW "=>"
            STRING_LITERAL "gpt4o-mini"
              QUOTE """
              WORD "gpt4o-mini"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Model.O3"
                WORD "Model"
                DOT "."
                WORD "O3"
            FAT_ARROW "=>"
            STRING_LITERAL "o3"
              QUOTE """
              WORD "o3"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIThrowClass"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "0"
                INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              OBJECT_LITERAL
                WORD "Error"
                L_BRACE "{"
                OBJECT_FIELD "status_code: 429"
                  WORD "status_code"
                  COLON ":"
                  INTEGER_LITERAL "429"
                COMMA ","
                OBJECT_FIELD
                  WORD "body"
                  COLON ":"
                  STRING_LITERAL "rate limited"
                    QUOTE """
                    WORD "rate"
                    WORD "limited"
                    QUOTE """
                R_BRACE "}"
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "_"
                WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIThrowEnum"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "0"
                INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              PATH_EXPR "Model.O3"
                WORD "Model"
                DOT "."
                WORD "O3"
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "_"
                WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIUsesRootConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.Config"
          WORD "root"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.key"
          WORD "cfg"
          DOT "."
          WORD "key"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIUsesRootStatus"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "root.Status"
      WORD "root"
      DOT "."
      WORD "Status"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root.Status.Ok"
          WORD "root"
          DOT "."
          WORD "Status"
          DOT "."
          WORD "Ok"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIMatchesRootStatus"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "s"
        COLON ":"
        TYPE_EXPR "root.Status"
          WORD "root"
          DOT "."
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "s"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.Status.Ok"
                WORD "root"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Ok"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.Status.Failed"
                WORD "root"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Failed"
            FAT_ARROW "=>"
            STRING_LITERAL "failed"
              QUOTE """
              WORD "failed"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.Status.Pending"
                WORD "root"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Pending"
            FAT_ARROW "=>"
            STRING_LITERAL "pending"
              QUOTE """
              WORD "pending"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIUsesLlmConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.llm.Config"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.model"
          WORD "cfg"
          DOT "."
          WORD "model"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIUsesLlmResponse"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "r"
        COLON ":"
        TYPE_EXPR "root.llm.Response"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Response"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "r.text"
          WORD "r"
          DOT "."
          WORD "text"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIUsesLlmStatus"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "root.llm.Status"
      WORD "root"
      DOT "."
      WORD "llm"
      DOT "."
      WORD "Status"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root.llm.Status.Generating"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Status"
          DOT "."
          WORD "Generating"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIMatchesLlmStatus"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "s"
        COLON ":"
        TYPE_EXPR "root.llm.Status"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "s"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.llm.Status.Ready"
                WORD "root"
                DOT "."
                WORD "llm"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Ready"
            FAT_ARROW "=>"
            STRING_LITERAL "ready"
              QUOTE """
              WORD "ready"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.llm.Status.Generating"
                WORD "root"
                DOT "."
                WORD "llm"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Generating"
            FAT_ARROW "=>"
            STRING_LITERAL "generating"
              QUOTE """
              WORD "generating"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.llm.Status.Done"
                WORD "root"
                DOT "."
                WORD "llm"
                DOT "."
                WORD "Status"
                DOT "."
                WORD "Done"
            FAT_ARROW "=>"
            STRING_LITERAL "done"
              QUOTE """
              WORD "done"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIUsesAuthConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.auth.Config"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.provider"
          WORD "cfg"
          DOT "."
          WORD "provider"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIUsesAuthRole"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "root.auth.Role"
      WORD "root"
      DOT "."
      WORD "auth"
      DOT "."
      WORD "Role"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root.auth.Role.User"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Role"
          DOT "."
          WORD "User"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIMatchesAuthRole"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "r"
        COLON ":"
        TYPE_EXPR "root.auth.Role"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Role"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "r"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.auth.Role.Admin"
                WORD "root"
                DOT "."
                WORD "auth"
                DOT "."
                WORD "Role"
                DOT "."
                WORD "Admin"
            FAT_ARROW "=>"
            STRING_LITERAL "admin"
              QUOTE """
              WORD "admin"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.auth.Role.User"
                WORD "root"
                DOT "."
                WORD "auth"
                DOT "."
                WORD "Role"
                DOT "."
                WORD "User"
            FAT_ARROW "=>"
            STRING_LITERAL "user"
              QUOTE """
              WORD "user"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "root.auth.Role.Guest"
                WORD "root"
                DOT "."
                WORD "auth"
                DOT "."
                WORD "Role"
                DOT "."
                WORD "Guest"
            FAT_ARROW "=>"
            STRING_LITERAL "guest"
              QUOTE """
              WORD "guest"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIMixedErrors"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "openai_err"
        COLON ":"
        TYPE_EXPR "Error"
          WORD "Error"
      COMMA ","
      PARAMETER
        WORD "root_err"
        COLON ":"
        TYPE_EXPR "root.Error"
          WORD "root"
          DOT "."
          WORD "Error"
      COMMA ","
      PARAMETER
        WORD "llm_err"
        COLON ":"
        TYPE_EXPR "root.llm.Error"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Error"
      COMMA ","
      PARAMETER
        WORD "auth_err"
        COLON ":"
        TYPE_EXPR "root.auth.Error"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Error"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "openai_err.body"
          WORD "openai_err"
          DOT "."
          WORD "body"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "OpenAIMixedModels"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "openai_model"
        COLON ":"
        TYPE_EXPR "Model"
          WORD "Model"
      COMMA ","
      PARAMETER
        WORD "llm_model"
        COLON ":"
        TYPE_EXPR "root.llm.Model"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Model"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "openai_model"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Model.GPT4o"
                WORD "Model"
                DOT "."
                WORD "GPT4o"
            FAT_ARROW "=>"
            STRING_LITERAL "gpt4o"
              QUOTE """
              WORD "gpt4o"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Model.GPT4oMini"
                WORD "Model"
                DOT "."
                WORD "GPT4oMini"
            FAT_ARROW "=>"
            STRING_LITERAL "mini"
              QUOTE """
              WORD "mini"
              QUOTE """
            COMMA ","
          MATCH_ARM
            PATTERN
              TYPE_EXPR "Model.O3"
                WORD "Model"
                DOT "."
                WORD "O3"
            FAT_ARROW "=>"
            STRING_LITERAL "o3"
              QUOTE """
              WORD "o3"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"

=== ERRORS ===
None
